@@ -1,5 +1,10 @@
 2012-08-03  Maciej W. Rozycki  <macro@codesourcery.com>
 
+	* elfxx-mips.c (mips_elf_perform_relocation): Update the
+	cross-mode jump message.
+
+2012-08-03  Maciej W. Rozycki  <macro@codesourcery.com>
+
 	* elfxx-mips.c (_bfd_mips_elf_size_dynamic_sections): Update the
 	comment on DT_MIPS_RLD_MAP.
 
